# inmob

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/: CODEOWNERS
data/silver/: inmob.sqlite  listing_attributes_current.csv  listings_current.csv
docs/: 01 - Architecture Overview.md  02 - Pipeline Layers.md  03 - Data Contracts and Lineage.md  04 - Failure Replay and Operations.md  05 - Analytical Domain.md  06 - Decision Log.md  07 - Lean Implementation Path.md  07 - Repository Structure.md  08 - Implementation and Run Log.md  09 - Lucas Zonaprop API and Gold Strategy Notes.md  Architecture Canvas.canvas  Home.md
docs/.obsidian/: graph.json
src/inmob/: __init__.py
src/inmob/bronze/: __init__.py  artifacts.py
src/inmob/bronze/contracts/: __init__.py  bronze.py
src/inmob/bronze/raw_store/: __init__.py  filesystem.py  store.py
src/inmob/bronze/sources/: __init__.py  base.py  browser.py
src/inmob/cli/: cli.py  config.py  store.py
src/inmob/cli/bronze/: __init__.py  (+3 more)
src/inmob/ingestion/: __init__.py  pipeline.py
src/inmob/logging/: __init__.py  config.py
src/inmob/silver/: __init__.py  runner.py  store.py
src/inmob/standardization/: __init__.py  runner.py  store.py
tests/bronze/zonaprop/: test_cli_live_caba_casas_departamentos_venta_relevance_pagina_1.py  test_cli_live_casas_departamentos_venta_recoleta_usd_300000_mas_de_2_banos_mas_de_1_cochera_pagina_1.py
tests/integration/: test_remax_listing_bronze.py
tests/unit/ingestion/: test_initial_sources.py  test_pipeline.py  test_raw_store.py
tests/unit/standardization/: test_silver.py
(+93 files in other folders)
