[project]
name = "inmob"
version = "0.1.0"
description = "Defensive ETL/data platform for Argentine real estate listing intelligence."
authors = [{ name = "Lucas Tkacz", email = "lucastkacz@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "tenacity>=9.1.2,<10.0.0",
    "structlog>=25.5.0,<26.0.0",
    "loguru>=0.7.3,<0.8.0",
    "typer>=0.20.0,<0.21.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "playwright (>=1.60.0,<2.0.0)",
    "curl-cffi (>=0.15.0,<0.16.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
inmob = "inmob.cli.cli:app"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.8"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
